# Kyou-Minecraft-Launcher

./: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  router.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/config/: app.ts  theme.ts
src/layouts/: MainLayout.vue  SettingsLayout.vue
src/layouts/components/: PageHeader.vue  Tabs.vue
src/pages/: accounts.vue  downloads.vue  home.vue  index.vue  settings.vue  versions.vue  welcome.vue
src/utils/: desktop-preferences.ts
