[package]
name = "kyou-minecraft-launcher"
version = "0.1.0"
description = "Kyou Minecraft Launcher - A modern Minecraft launcher"
authors = ["Kyou"]
edition = "2021"

[lib]
name = "kyou_minecraft_launcher_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
zip = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
